# MEREAD

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Justfile  README.md  TODO.md  askama.toml  cliff.toml  deny.toml  flake.nix  go.mod  main.go  meread.1  package.nix  release.toml  template.html
.github/workflows/: ci.yaml  docker.yml  docs.yml  release.yml  site.yml
assets/: script.js  styles-light.css  styles.css
cmd/: root.go
docs/: _index.md
lua/meread/: init.lua
media/: banner.typ
meread/: Cargo.toml
meread-nvim/: Cargo.toml
meread-nvim/src/: lib.rs
meread/assets/: script.js  styles.css
meread/src/: assets.rs  comrak_config.rs  export.rs  lib.rs  main.rs  reload.rs  render.rs
meread/templates/: template.html
meread/themes/: light-default.tmTheme
site/: config.toml
site/static/: styles.css
site/templates/: base.html
src/: assets.rs  comrak_config.rs  dark.tmTheme  lib.rs  main.rs  reload.rs  render.rs
templates/: template.html
