[package]
name = "meread"
version = "0.6.0"
description = "preview github flavored markdown locally"
repository = "https://github.com/sermuns/meread"
license = "WTFPL"
edition = "2024"
keywords = ["readme", "markdown", "preview", "server"]
categories = ["command-line-utilities", "web-programming::http-server"]
authors = ["Samuel Åkesson <sermuns@lysator.liu.se>"]

[dependencies]
askama = { version = "0.15", default-features = false, features = ["std", "derive"] }
axum = { version = "0.8", default-features = false, features = ["tokio", "http1"] }
clap = { version = "4", features = ["derive"] }
clap_mangen = "0.2"
color-eyre = { version = "0.6", default-features = false, features = ["track-caller"] }
comrak = { version = "0.51", default-features = false, features = ["bon", "shortcodes", "syntect"] }
futures = { version = "0.3", default-features = false }
hyper = { version = "1.8", default-features = false }
math-core = "0.5"
mime_guess = { version = "2", default-features = false }
notify = "8"
notify-debouncer-full = "0.7"
open = "5"
rust-embed = "8"
syntect = { version = "5.3", default-features = false, features = ["default-themes", "plist-load"] }
time = { version = "0.3", default-features = false, features = ["formatting", "local-offset", "macros"] }
tokio = { version = "1", features = ["macros", "rt"] }
tokio-stream = { version = "0.1", default-features = false, features = ["sync"] }
tower-http = { version = "0.6", features = ["fs"] }

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1
strip = true

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
uninlined_format_args = "allow"
trivially_copy_pass_by_ref = "deny"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
struct_excessive_bools = "allow"
