[workspace]
resolver = "3"
members = ["meread", "meread-nvim"]

[workspace.package]
version = "1.0.0"
edition = "2024"
repository = "https://github.com/sermuns/meread"
license = "WTFPL"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

missing_errors_doc = "allow"
missing_panics_doc = "allow"
struct_excessive_bools = "allow"
trivially_copy_pass_by_ref = "deny"
uninlined_format_args = "allow"

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
panic = "unwind"
codegen-units = 1
