[package]
name = "meread-nvim"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
itertools = "0.15"
meread = { path = "../meread", default-features = false }
nvim-oxi = {
  git = "https://github.com/noib3/nvim-oxi",
  features = ["libuv", "neovim-0-12"]
}
